# steam-discord-bot

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: check_prices.yml
src/: __init__.py  config.py  scheduler.py  steam_crawler.py
