[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steam-discord-bot"
version = "0.1.0"
description = "Discord bot for monitoring Steam game prices and discounts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Steam Discord Bot" }
]
dependencies = [
    "discord.py>=2.3.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
